[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
libm = "0.2.16"
wasmi = { version = "0.31", default-features = false }
smoltcp = { version = "0.10.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "microkernel"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
